--- a/main.html
+++ b/main.html
@@ -8,8 +8,8 @@
 
 <body>
 	<div class="container">
-		<header><h1>ANIMAL PHOTOS</h1></header>
-		<div class="animal-photos">
+		<header id="photo-heading"><h1>ANIMAL PHOTOS</h1></header>
+		<div id="animal-photos">
 			<div class="row">
 				<img src="https://www2.d125.org/applied_arts/teched/courses/WEB/portfolios/2014_FallP8/Rami_Portfolio_Period8/unit4_css/project_1folder/cssProject1/camel.jpg" alt="camel">
 				<img src="https://www2.d125.org/applied_arts/teched/courses/WEB/portfolios/2014_FallP8/Rami_Portfolio_Period8/unit4_css/project_1folder/cssProject1/cheetah.jpg" alt="cheetah">
